{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 19,
  "lineage": "788c523d-494b-eb3e-0d6e-448e20c6d2b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01545eecf8304ada3",
            "arn": "arn:aws:ec2:ca-central-1:247332613204:elastic-ip/eipalloc-01545eecf8304ada3",
            "domain": "vpc",
            "id": "eipalloc-01545eecf8304ada3",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-16-54-104-164.ca-central-1.compute.amazonaws.com",
            "public_ip": "16.54.104.164",
            "public_ipv4_pool": "amazon",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-nat-eip",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat-eip",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "eipalloc-01545eecf8304ada3",
            "region": "ca-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:internet-gateway/igw-0365fdcd6876d8179",
            "id": "igw-0365fdcd6876d8179",
            "owner_id": "247332613204",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-igw",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "igw-0365fdcd6876d8179",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01545eecf8304ada3",
            "association_id": "eipassoc-0c541f89a5f16ff5b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0988ff5815a32a343",
            "network_interface_id": "eni-0e124934183ea68f1",
            "private_ip": "10.0.0.73",
            "public_ip": "16.54.104.164",
            "region": "ca-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da33a1bb50806394",
            "tags": {
              "Name": "dev-gw-NAT",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-gw-NAT",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "nat-0988ff5815a32a343",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:route-table/rtb-0eb8576e4ceb639ea",
            "id": "rtb-0eb8576e4ceb639ea",
            "owner_id": "247332613204",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0988ff5815a32a343",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private_rt",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private_rt",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtb-0eb8576e4ceb639ea",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:route-table/rtb-0e2f37978cdc657d3",
            "id": "rtb-0e2f37978cdc657d3",
            "owner_id": "247332613204",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0365fdcd6876d8179",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public_rt",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public_rt",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtb-0e2f37978cdc657d3",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ca-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0472af76a005b59c0",
            "region": "ca-central-1",
            "route_table_id": "rtb-0eb8576e4ceb639ea",
            "subnet_id": "subnet-08dfd8338730880dd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtbassoc-0472af76a005b59c0",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6930921cdf0ed23",
            "region": "ca-central-1",
            "route_table_id": "rtb-0eb8576e4ceb639ea",
            "subnet_id": "subnet-0c27d3b0474a47f35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtbassoc-0d6930921cdf0ed23",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7c1e38e73f9a21",
            "region": "ca-central-1",
            "route_table_id": "rtb-0eb8576e4ceb639ea",
            "subnet_id": "subnet-0449394a61d844583"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtbassoc-0dd7c1e38e73f9a21",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ca-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d405d82f65c5c4",
            "region": "ca-central-1",
            "route_table_id": "rtb-0e2f37978cdc657d3",
            "subnet_id": "subnet-0da33a1bb50806394"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtbassoc-065d405d82f65c5c4",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059c13dc2ac8c96e2",
            "region": "ca-central-1",
            "route_table_id": "rtb-0e2f37978cdc657d3",
            "subnet_id": "subnet-0bbeb71f8fcd86139"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtbassoc-059c13dc2ac8c96e2",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e341092370327899",
            "region": "ca-central-1",
            "route_table_id": "rtb-0e2f37978cdc657d3",
            "subnet_id": "subnet-00ccb555d882b07e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "rtbassoc-0e341092370327899",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ca-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:subnet/subnet-08dfd8338730880dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dfd8338730880dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247332613204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-private-ca-central-1a",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-ca-central-1a",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "subnet-08dfd8338730880dd",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:subnet/subnet-0c27d3b0474a47f35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c27d3b0474a47f35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247332613204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-private-ca-central-1b",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-ca-central-1b",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "subnet-0c27d3b0474a47f35",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:subnet/subnet-0449394a61d844583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0449394a61d844583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247332613204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-private-ca-central-1d",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-ca-central-1d",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "subnet-0449394a61d844583",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ca-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:subnet/subnet-0da33a1bb50806394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da33a1bb50806394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247332613204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-public-ca-central-1a",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-ca-central-1a",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "subnet-0da33a1bb50806394",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:subnet/subnet-0bbeb71f8fcd86139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbeb71f8fcd86139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247332613204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-public-ca-central-1b",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-ca-central-1b",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "subnet-0bbeb71f8fcd86139",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ca-central-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:subnet/subnet-00ccb555d882b07e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ccb555d882b07e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247332613204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-public-ca-central-1d",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-ca-central-1d",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c52b884e52f40897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "subnet-00ccb555d882b07e4",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247332613204:vpc/vpc-0c52b884e52f40897",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd419dde85b234dd",
            "default_route_table_id": "rtb-03e1ddd8ad1784965",
            "default_security_group_id": "sg-0cb3802fa33a3e9ed",
            "dhcp_options_id": "dopt-0ac43658ff32b59b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c52b884e52f40897",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e1ddd8ad1784965",
            "owner_id": "247332613204",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-vpc",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Organization": "JALEX Solutions Inc",
              "Owner": "Christian Onyeukwu",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247332613204",
            "id": "vpc-0c52b884e52f40897",
            "region": "ca-central-1"
          }
        }
      ]
    }
  ]
}